Refactored to use lib-test-utils